# python-libeconf

./: .gitignore  .pre-commit-config.yaml  README.md  econf.py  pyproject.toml
.github/workflows/: build_wheels.yml  pages.yml  tests.yml
docs/: conf.py  index.rst  usage.rst
docs/_build/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/_build/.doctrees/: environment.pickle  index.doctree
docs/_build/_sources/: index.rst.txt
docs/_build/doctrees/: api.doctree  environment.pickle  index.doctree  usage.doctree
docs/_build/doctrees/source/: api.doctree
docs/_build/html/: .buildinfo  api.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  usage.html
docs/_build/html/_sources/: api.rst.txt  index.rst.txt  usage.rst.txt
docs/_build/html/_sources/source/: api.rst.txt
docs/_build/html/source/: api.html
docs/_build/man/: python-libeconf.3
econf/: __init__.py  econf.py
econf.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
python_libeconf.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/: econf.py  main.py
src/libeconf/: libeconf.py
test/: test_econf.py  test_econf_getters.py  test_econf_getters_def.py  test_econf_setters.py
