[tool.poetry]
name = "python-libeconf"
version = "0.1.0"
description = "Python bindings for libeconf"
authors = ["nkrapp <nico.krapp@suse.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
