[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "python-libeconf"
version = "0.1.0"
description = "Python bindings for libeconf"
authors = [{name="nkrapp", email="nico.krapp@suse.com"}]
readme = "README.md"

[project.optional-dependencies]
doc_requires = [
    "sphinx",
]

[tool.isort]
profile = "black"
